chore: modify List